# sagittarius-paella

./: CMakeLists.txt  README.md
docs/: paella.md  plato.md  tapas.md
examples/: paella.scm  proxy.scm
examples/plato/: run.scm
examples/plato/apps/logsearch/: ajax.js  config.scm  form.js  handler.scm  main.html  style.css
examples/plato/apps/memo/: handler.scm  load.js  loader.html
examples/plato/apps/repl/: main.html  meta.scm  repl.scm
lib/: cuberteria.scm  paella.scm  plato.scm  tapas.scm
lib/plato/: invoke.scm  session.scm  tools.scm
lib/tapas/: base.scm  handler.scm  html.scm  tags.scm
scripts/: plato-recipe.scm
tests/: test-async.scm  test-cuberteria.scm  test-mime.scm  test-tapas.scm
